--- a/src/components/NewTodo.css
+++ b/src/components/NewTodo.css
@@ -8,8 +8,7 @@ form {
   margin-bottom: 1rem;
 }
 
-label,
-input {
+label, input {
   display: block;
   width: 100%;
 }
@@ -45,22 +44,4 @@ button:hover,
 button:active {
   background: #6a0a77;
   border-color: #6a0a77;
-}
-
-ul {
-  list-style: none;
-  width: 90%;
-  max-width: 40rem;
-  margin: 2rem auto;
-  padding: 0;
-}
-
-li {
-  margin: 1rem 0;
-  padding: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-  border-radius: 6px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
