move css partialy to tasklis module

--- a/src/components/taskList.module.css
+++ b/src/components/taskList.module.css
@@ -1,4 +1,4 @@
-ul {
+.taskList {
   list-style: none;
   width: 90%;
   max-width: 40rem;
@@ -6,7 +6,7 @@ ul {
   padding: 0;
 }
 
-li {
+.taskListItem {
   margin: 1rem 0;
   padding: 1rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
